Changed chart size, added closing a tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="flex flex-col gap-6 items-center p-6 dark:bg-[--header-color] bg-white text-white lg:flex-row lg:text-xl">
         <img alt="icon profile" src="./src/universe.jpg" class="profile text-center w-16 h-16 border-2 border-transparent hover:border-collapse rounded-full hover:border-dashed hover:border-2 hover:border-[--border]">
         <ul class="flex gap-4 font-medium lg:mr-auto">
-            <li><a href="index.html" class="hover:underline decoration-2 underline-offset-8 hover:decoration-[--border] active:text-[--border]">Find a Book</li>
+            <li><a href="index.html" class="hover:underline decoration-2 underline-offset-8 hover:decoration-[--border]">Find a Book</a></li>
             <li><a href="./src/chart.html" class="hover:underline decoration-2 underline-offset-8 decoration-[--border]">Chart</a></li>
             <li><a href="./src/bookshelf.html" class="hover:underline decoration-2 underline-offset-8 decoration-[--border]">My Bookshelf</a></li>
         </ul>
